# Guest-List-From-Contacts

./: .gitignore  GuestListFromContacts.spec  README.md  app.py  build_exe.ps1  flask_app.py  pyproject.toml
example/: example_contacts.vcf  example_guests.xlsx
src/guest_list_from_contacts/: __init__.py  matching.py  models.py  text.py  vcf_parser.py  workbook.py
static/css/: style.css
templates/: base.html  index.html  review.html
tests/: conftest.py  test_flask_app.py  test_matching.py  test_vcf_parser.py
